part1/1-09-more-services/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dowk-22-ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - port: 2401
      protocol: TCP
      targetPort: 3000
